Mod10_assignment/deploy/gowebapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowebapp
  labels:
    run: gowebapp
spec:
  replicas: 2
  selector:
    matchLabels:
      run: gowebapp
  template:
    metadata:
      labels:
        run: gowebapp
    spec:
      containers:
      - env:
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mysql
              key: password
        image: gcr.io/${PROJECT_ID}/gowebapp:v3
        name: gowebapp
        ports:
          - containerPort: 80
        livenessProbe:
          httpGet:
            path: /register
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet: 
            path: /register
            port: 80
          initialDelaySeconds: 25
          timeoutSeconds: 5
        resources:
          requests:
            cpu: "20m"
            memory: "10M"
          limits: 
            cpu: "500m"
            memory: "2G"
        volumeMounts:
          - name: config-volume
            mountPath: /go/src/gowebapp/config
      volumes: 
      - name: config-volume
        configMap:
          name: gowebapp
          items:
          - key: webapp-config-json
            path: config.json
