Mod10_assignment/deploy/gowebapp-mysql-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
spec:
  podSelector:
    matchLabels:
      #TODO add the appropriate match labels
  ingress:
    - from:
      - podSelector:
          matchLabels:
            #TODO add the appropriate match labels
