Mod10_assignment/deploy/gowebapp-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
spec:
  podSelector: 
    matchLabels:
      run: gowebapp
  ingress:
  #TODO add the appropriate rules to enable access from IP ranges
  policyTypes:
  - Ingress
